create mobile sidebar view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,8 @@
   .chatRow {
     @apply rounded-lg px-5 py-3 text-sm flex items-center justify-center space-x-2 hover:bg-gray-700/70 cursor-pointer text-gray-300 transition-all duration-200 ease-out;
   }
+
+  .btn {
+    @apply text-gray-300 rounded-lg p-1 m-1 text-sm hover:bg-gray-700/70 transition-all duration-200 ease-out;
+  }
 }
